// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.875em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 0em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Error quod dolores et nostrum. Voluptatibus aut rerum cum earum quas inventore incidunt. Quia quasi amet ex nulla quisquam voluptatibus.
 
Et ut vel dolor esse unde dolorum illum facilis atque. Officia necessitatibus temporibus voluptatem aspernatur. Sed qui consequatur.
 
Sunt a magnam reprehenderit sit reprehenderit hic. Tenetur facilis odit qui et est ut ea architecto. Ipsam qui distinctio suscipit. Eius similique molestiae.
 
Veniam animi quam maxime quas ut omnis cumque. Non impedit eos accusamus dolorem nobis. Itaque quasi aut reiciendis commodi. Expedita distinctio qui sunt. Non aut quas laboriosam odit voluptates iure officia sed.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.875em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Voluptatem iste sit sed harum. Tempore optio et cum laudantium est. Natus quae ea et. Distinctio recusandae quo mollitia est reiciendis sunt.
 
Quod non eaque sequi voluptas accusantium occaecati. Consequatur aut minima ut. Aut assumenda quo illo sed unde repellendus. Quam est est non odit architecto omnis ad quas.
 
Voluptas repudiandae animi nihil fugiat. Eveniet et aut quod repellat qui eos veniam quasi. Architecto et perferendis sed ut eius explicabo numquam voluptas eum. Recusandae corrupti nostrum ut quis ex quos aliquam. Voluptates mollitia est. Accusantium consequatur praesentium aperiam veniam nobis doloremque optio rerum.
 
Quam sit dolor quibusdam quo quia accusantium nemo aspernatur. At reiciendis nihil cupiditate deleniti tenetur qui necessitatibus rerum sint. Quis sit impedit in blanditiis ut. Quod doloribus perspiciatis est minus suscipit animi. Asperiores amet modi. Est esse ut et numquam recusandae mollitia.
    </p>
  </div>
</div>
`;
